--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
 				var x = Spline.linspace(0,30,data.length);
 				var graph = Spline.figure("#chart1", x);
-				Spline.plot( graph, x, data, 1, 'blue');
+				Spline.plot( graph, x, data, 1, '#ff0000');
 				
 			});
 		</script>
