--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
 				var x = Spline.linspace(0,30,data.length);
 				var graph = Spline.figure("#chart1", x);
-				Spline.plot( graph, x, data, 1, '#ff0000');
-				
+				Spline.plot( graph, x, data, 'linear', 'red', '1 1', 1);
+				Spline.plot( graph, x, data, 'basis', 'steelblue', '', 2);
 			});
 		</script>
 	</head>
