--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 				border:solid 1px #ccc;
 				width:100%;
 			}
+			.contain{
+				overflow:auto;
+			}
 			footer{
 				background-color:#efefef;
 				border-top:#ccc solid 1px;
@@ -94,13 +97,14 @@
 					<div id="chart1" class="chart" style="height: 200px"></div>
 				</div>
 				<div class="col-md-3">
-					<table class="table table-striped">
-						<tr>
-							<th>X</th>
-							<th>Y</th>
-							<th>Y<small>aprox</small></th>
-						</tr>
-					</table>
+					<div class="contain" style="height:200px">
+						<table class="table table-striped table-hover table-condensed">
+							<tr>
+								<th>X</th>
+								<th>Y</th>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 			<footer>
