--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 			
 			$(document).ready(function(){
 				var a = [1,2,3,4,5];
-				var b = [3,-1];
 				
-				var c = Spline.conv(a,b);
+				var c = Spline.interpolate.lagrange_polynomials(a);
 				console.log(c);
 				
 				var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
